# chaf

./: Cargo.toml  README.md
src/: cli.rs  core.rs  engine.rs  lib.rs  main.rs  util.rs
src/core/: ast.rs  evaluator.rs  filter.rs  parser.rs
tests/: cli_tests.rs  engine_tests.rs  main_tests.rs
