[package]
name = "chaf"
version = "0.1.0"
edition = "2021"
description = "A CLI filter tool that removes lines based on logical conditions using AND, OR, NOT, and parentheses."
repository = "https://github.com/nakkiy/chaf"
documentation = "https://github.com/nakkiy/chaf"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["filter", "cli", "log", "text", "dsl"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "chaf"
path = "src/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
